# Multimedia-demo

./: README.md
uva_building_proj/: README.md
visual_perception_proj/: README.md
visual_perception_proj/calib/: README.md  calibHomography.py  homography_matrix.json
visual_perception_proj/source/: cameras.json  run_hdmi_yolo_line.sh
visual_perception_proj/source/code/: CMakeLists.txt  compile.sh  toolchain-aarch64-linux.cmake
visual_perception_proj/source/code/bmgui/: video_pixmap_widget.cpp  video_pixmap_widget.h
visual_perception_proj/source/code/bmutility/: bmutility_types.h
visual_perception_proj/source/code/examples/: CMakeLists.txt  cameras.json  configuration.h
visual_perception_proj/source/code/examples/yolov5_line/: CMakeLists.txt  laneDetection.cpp  laneDetection.h  main.cpp  worker.cpp  worker.h  yolov5s.cpp  yolov5s.h
visual_perception_proj/source/code/tracker/: bm_tracker.cpp
visual_perception_proj/source/code/tracker/DeepAppearanceDescriptor/: model.h
visual_perception_proj/source/code/tracker/KalmanFilter/: track.cpp  track.h
visual_perception_proj/video/: ffmpeg发送rtsp.txt
